--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -28,6 +28,8 @@ $color-french-gray: #DCDDDD;
 $color-ashy: #F7F8F8;
 $color-text-gray: #9FA0A0;
 $color-light-red: rgba(216, 56 ,86, 0.1);
+$color-carbon-black: #231815;
+$color-carbon-gray: #EFEFEF;
 
 $img-url-public: "../images/";
 $img-url-login: "../images/login/";
