--- a/resources/sass/article/app.scss
+++ b/resources/sass/article/app.scss
@@ -56,3 +56,92 @@
     }
   }
 }
+
+.articles-edit {
+  .btn-submit {
+    width: 100px;
+    height: 50px;
+  }
+
+  .btn-cancel {
+    width: 100px;
+    height: 50px;
+  }
+
+  a.btn-cancel {
+    padding: 0;
+    line-height: 50px;
+  }
+}
+
+.articles-index {
+  margin-top: 25px;
+  padding: 30px;
+
+  .cover {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+.articles-show {
+  background-color: white;
+
+  .header-nav {
+    background-color: $color-ashy;
+    margin-top: 15px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+
+    .item {
+      font-size: 14px;
+      margin-left: 36px;
+
+      &:before {
+        content: ">";
+        padding-right: 22px;
+      }
+
+      &:first-child {
+        margin-left: 0;
+
+        &:before {
+          content: "";
+        }
+      }
+    }
+  }
+
+  .content {
+    > div {
+      padding: 50px 116px 103px 116px;
+    }
+
+    .title {
+      font-size: 32px;
+      color: $color-carbon-black;
+    }
+
+    .sub {
+      font-size: 14px;
+      color: $color-light-gray;
+      margin-top: 51px;
+    }
+
+    .divider {
+      margin: 22px 0;
+      background-color: $color-carbon-gray;
+    }
+  }
+
+  .footer {
+    background-color: $color-ashy;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 60px;
+
+    .btn {
+      width: 80px;
+    }
+  }
+}
