--- a/public/css/article.css
+++ b/public/css/article.css
@@ -616,6 +616,19 @@ a.a-red:hover {
   padding-bottom: 113px;
 }
 
+.job-create .default-form .location .choose {
+  font-size: 0px;
+}
+
+.job-create .default-form .location .choose select {
+  width: 150px !important;
+}
+
+.job-create .default-form .location .address {
+  width: 100%;
+  margin-top: 5px;
+}
+
 .default-form .btn-form-submit {
   margin-top: 100px;
 }
