--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -30,6 +30,7 @@ $color-text-gray: #9FA0A0;
 $color-light-red: rgba(216, 56 ,86, 0.1);
 $color-carbon-black: #231815;
 $color-carbon-gray: #EFEFEF;
+$color-light-red-2: rgba(216, 56 ,86, 0.03);
 
 $img-url-public: "../images/";
 $img-url-login: "../images/login/";
@@ -888,7 +889,7 @@ a.a-red {
         background-color: white;
       }
       &:nth-of-type(even) {
-        background-color: rgba(216, 56 ,86, 0.03);
+        background-color: $color-light-red-2;
       }
     }
   }
