--- a/public/css/my.css
+++ b/public/css/my.css
@@ -68,6 +68,14 @@ a.a-red:hover {
   color: #D83856;
 }
 
+.scheckbox {
+  margin-right: 20px;
+}
+
+.scheckbox.all {
+  margin-left: 13px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -778,7 +786,12 @@ a.a-red:hover {
 }
 
 .job-list .job-list-body .default-list .btn {
-  width: 93px;
+  min-width: 93px;
+}
+
+.job-list .job-list-body .default-list .btn .icon-download {
+  margin-top: -5px;
+  margin-right: 8px;
 }
 
 .job-list .job-list-body .empty {
@@ -1598,6 +1611,14 @@ a.a-red:hover {
   color: #D83856;
 }
 
+.scheckbox {
+  margin-right: 20px;
+}
+
+.scheckbox.all {
+  margin-left: 13px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -2308,7 +2329,12 @@ a.a-red:hover {
 }
 
 .job-list .job-list-body .default-list .btn {
-  width: 93px;
+  min-width: 93px;
+}
+
+.job-list .job-list-body .default-list .btn .icon-download {
+  margin-top: -5px;
+  margin-right: 8px;
 }
 
 .job-list .job-list-body .empty {
@@ -3533,6 +3559,14 @@ a.a-red:hover {
   color: #D83856;
 }
 
+.scheckbox {
+  margin-right: 20px;
+}
+
+.scheckbox.all {
+  margin-left: 13px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -4243,7 +4277,12 @@ a.a-red:hover {
 }
 
 .job-list .job-list-body .default-list .btn {
-  width: 93px;
+  min-width: 93px;
+}
+
+.job-list .job-list-body .default-list .btn .icon-download {
+  margin-top: -5px;
+  margin-right: 8px;
 }
 
 .job-list .job-list-body .empty {
@@ -5068,6 +5107,14 @@ a.a-red:hover {
   color: #D83856;
 }
 
+.scheckbox {
+  margin-right: 20px;
+}
+
+.scheckbox.all {
+  margin-left: 13px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -5778,7 +5825,12 @@ a.a-red:hover {
 }
 
 .job-list .job-list-body .default-list .btn {
-  width: 93px;
+  min-width: 93px;
+}
+
+.job-list .job-list-body .default-list .btn .icon-download {
+  margin-top: -5px;
+  margin-right: 8px;
 }
 
 .job-list .job-list-body .empty {
@@ -6710,6 +6762,14 @@ a.a-red:hover {
   color: #D83856;
 }
 
+.scheckbox {
+  margin-right: 20px;
+}
+
+.scheckbox.all {
+  margin-left: 13px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -7420,7 +7480,12 @@ a.a-red:hover {
 }
 
 .job-list .job-list-body .default-list .btn {
-  width: 93px;
+  min-width: 93px;
+}
+
+.job-list .job-list-body .default-list .btn .icon-download {
+  margin-top: -5px;
+  margin-right: 8px;
 }
 
 .job-list .job-list-body .empty {
@@ -8253,6 +8318,14 @@ a.a-red:hover {
   color: #D83856;
 }
 
+.scheckbox {
+  margin-right: 20px;
+}
+
+.scheckbox.all {
+  margin-left: 13px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -8963,7 +9036,12 @@ a.a-red:hover {
 }
 
 .job-list .job-list-body .default-list .btn {
-  width: 93px;
+  min-width: 93px;
+}
+
+.job-list .job-list-body .default-list .btn .icon-download {
+  margin-top: -5px;
+  margin-right: 8px;
 }
 
 .job-list .job-list-body .empty {
